Preliminary Colpitz part.

--- a/tasks.tex
+++ b/tasks.tex
@@ -263,7 +263,7 @@ $\overline{x^2}$
 }
 
 Одной из известных хаотических систем, легко реализуемых как модельно,
-так и схемотехнически (рис.~\ref{atu:fig:chuascheme}),
+так и схемотехнически (рис.~\ref{atu:f:chuascheme}),
 является нелинейная система Чуа~[??]:
 
 \begin{figure}[htb!]
@@ -291,7 +291,7 @@ $\overline{x^2}$
   \end{tikzpicture}
 \end{center}
 \caption{Условная электрическая цепь, реализующая хаотическую систему Чуа}
-\label{atu:fig:chuascheme}
+\label{atu:f:chuascheme}
 \end{figure}
 
 
@@ -306,7 +306,7 @@ $\overline{x^2}$
 
 Единственным нелинейным элементом в данной системе является ``диод Чуа''
 (обозначен на схеме как $R_c$) с
-характеристикой $g(V)$~(рис.~\ref{atu:fig:diodchua}),
+характеристикой $g(V)$~(рис.~\ref{atu:f:diodchua}),
 обладающий различным отрицательным наклоном
 ($m_0$ и $m_1$) на разных участках,
 тем самым являющийся управляемым источником энергии.
@@ -341,7 +341,7 @@ g(V) =
   \end{tikzpicture}
 \end{center}
 \caption{Характеристика \(I=g(V)\) диода Чуа}
-\label{atu:fig:diodchua}
+\label{atu:f:diodchua}
 \end{figure}
 
 
@@ -631,14 +631,121 @@ $\overline{x^2}$
   colp: ASAU-21, APIR-2013
 }
 
+В  практике   создания   радиоэлектронных   устройств   часто   используются
+генераторы сигналов, способные генерировать разнообразные виды  сигналов, в том числе
+сложно-периодические и хаотические.
+В частности, генератор  Колпитца~[??], в  зависимости   от   условий,   может
+генерировать  колебания,  как  близкие  к  гармоническим,  так  и  проявлять
+хаотическую  динамику  в  широком  спектральном   диапазоне.   Идентификация
+параметров рассматриваемого генератора  необходима,  с  одной  стороны,  для
+обеспечения  требуемого  режима  работы.  С  другой  стороны,  информация  о
+параметрах системы необходима при проведении  контроля  работоспособности  в
+процессе эксплуатации~[??].
+
+На рис.~\ref{atu:f:colp_schem} приставлена одна из электрических схем,
+реализующих генератор Колпитца на биполярном транзисторе.
+Из множества схем данная была выбрана из-за наличия
+одного источника напряжения, и простоты схемотехнической реализации.
+
+\begin{figure}[htb!]
+\centerline{\includegraphics[width=0.5\textwidth]{p/cha/colp/colp_schem.pdf} }
+\caption{Электрическая схема генератора Колпитца на биполярном транзисторе}
+\label{atu:f:colp_schem}
+\end{figure}
+
+При создании модели генератора Колпитца систему уравнений можно
+заранее упростить, если заметить, что
+делитель на резисторах
+$\mathrm{R}_1$, $\mathrm{R}_2$,
+вместе с конденсатором
+$\mathrm{C}_0$ обеспечивают
+постоянство потенциала базы
+$V_b = V_{CC} \frac{R_1}{R_1+R_2}$,
+поэтому из дальнейшего рассмотрения данные элементы следует
+исключить.
+
+Рассмотрев процессы заряда конденсаторов и изменение тока через
+катушку идуктивности, получим следующую систему уравнений:
+
 \begin{equation}
 \label{atu:eq:colp_phys}
 \begin{cases}
   C_1 \frac{dV_{1}}{dt}  = I_L - I_{CE} , \\
-  L_1 \frac{dI_L}{dt}    = V_{CC} - V_{1} - V_{2} - I_L R_C , \\
+  L   \frac{dI_L}{dt}    = V_{CC} - V_{1} - V_{2} - I_L R_C , \\
   C_2 \frac{dV_{2}}{dt}  = I_L - \frac{V_{2}}{R_e}.
 \end{cases}
 \end{equation}
+
+
+\noindent
+где
+$V_{CC} $ -- напряжение питания,
+$V_1,$ $V_2$ -- разность потенциалов между выводами конденсаторов
+$\mathrm{C}_1$ и $\mathrm{C}_2$ соответственно,
+$I_L$, $I_{CE}$ -- токи катушки индуктивности и транзистора (коллектор-эмиттер).
+
+При переходе к безразмерному виду следует определить,
+какие физические параметры определяют безразмерные величины.
+Это потребуется для синтеза критерия идентификации.
+Для упрощения рассмотрения, не снижая общности,
+будем считать $C_1 = C_2 = C$.
+
+Прежде всего,
+в уравнениях присутствуют производные по времени,
+а из всех используемых при описании
+системы физических параметров можно составить три
+комбинации, имеющих размерность времени:
+$ \sqrt{L C}$, $ R C $ и  $L/R$.
+Частотные характеристики рассматриваемого генератора,
+в отличие, например, от релаксационного,
+определяются ёмкостью и индуктивностью,
+поэтому характерное время следует задать так:
+$ T_s = \sqrt{L C} $.
+Тогда безразмерное время $t_s$
+и соответствующие производные
+будут определены таким образом:
+
+\[
+  t_s = \frac{t}{T_s}; \quad
+  dt = T_s dt_s; \quad
+  \frac{d}{dt} = \frac{1}{T_s} \frac{d}{dt_s}; \quad
+  \frac{dx}{dt_s} \equiv \dot{x} = T_s \frac{dx}{dt} .
+\]
+
+%Тот же самый множитель $T_s$ появляется и в выражениях для
+%токов, т.к. $I=dQ/dt$, и сокращается.
+
+Динамические свойства (в т.ч. условия начала генерации и перехода в хаотический режим) определяются
+соотношением активных и реактивных свойств системы. При этом величина
+$ \rho = \sqrt{L/C} $ имеет размерность сопротивления
+и определяет реактивное сопротивление. Эту величину можно использовать
+для обезразмеривания активных сопротивлений.
+
+\[
+  b = \frac{R_E}{\rho}; \quad
+  d = \frac{R_C}{\rho}.
+\]
+
+
+Система содержит только один активный нелинейный компонент -- транзистор.
+Следовательно, именно этот элемент определяет
+масштаб по напряжению. В простейшей модели транзистора
+такой масштабной величиной может служить
+$V_{je}$ -- падение напряжения на переходе база--эмиттер
+в активном режиме. Обозначим:
+
+\[
+  x = \frac{V_{1}}{V_{je}} ; \quad
+  y = \frac{\rho I_L}{V_{je}} ; \quad
+  z = \frac{V_{2}}{V_{je}}, \quad
+  c = \frac{V_{CC}}{V_{je}}, \quad
+  e =  \frac{V_{b}}{V_{je}}.
+\]
+
+Используем простейшую модель транзистора, считаем, что переход
+база-эмиттер открывается при $V_{BE} = V_{je}$,
+а ток коллектора $I_c = \alpha I_b$ и $ I_c \gg I_b$.
+С учётом всего вышеизложенного получаем следующую систему уравнений:
 
 \begin{equation}
 \label{atu:eq:colp}
@@ -649,24 +756,36 @@ $\overline{x^2}$
 \end{cases}
 \end{equation}
 
-Используется простая модель транзистора:
+\noindent
+где, для выбранных номиналов и модели транзистора:
+$ a = 30$, $b = 0.78$, $c=15$, $d=0.08$, $e=7.5$,
+и
+
 \[
 F(z) =
 \begin{cases}{l}
-    e-z-1, \; z \le e-1
-    \\
-    0, z>e-1
+  e-z-1, & z \le e-1  \\
+  0,     & z  >  e-1
 \end{cases}.
 \]
 
-Идентифицируемый параметр:
-$b \in [ 0.5; 1.1 ]$
+При этом параметр $b$ характеризует соотношение
+активного и реактивного сопротивления,
+и, следовательно, режима работы генератора.
+Величиной этого параметра проще всего управлять,
+изменяя $\mathrm{R}_c$.
+Поставленной задачей будем считать идентификацию
+данного параметра.
 
-Остальные параметры:
-$ a = 30$, $b = 0.78$, $c=15$, $d=0.08$, $e=7.5$.
+
+% Идентифицируемый параметр:
+% $b \in [ 0.5; 1.1 ]$
+%
+% Остальные параметры:
+% $ a = 30$, $b = 0.78$, $c=15$, $d=0.08$, $e=7.5$.
 
 \begin{figure}[htb!]
-\centerline{\includegraphics[width=0.5\textwidth]{p/cha/colp_phase.pdf} }
+\centerline{\includegraphics[width=0.5\textwidth]{p/cha/colp/colp_phase.pdf} }
 \caption{Аттрактор системы Колпитца (\ref{atu:eq:colp})}
 \label{atu:f:colp_phase}
 \end{figure}
